--- a/src/Templates/ModelTemplate.cshtml
+++ b/src/Templates/ModelTemplate.cshtml
@@ -3,6 +3,7 @@
 @using AutoRest.Go.Model
 @using AutoRest.Go.Templates
 @using AutoRest.Core.Utilities
+@using AutoRest.Extensions;
 
 @inherits AutoRest.Core.Template<AutoRest.Go.Model.CompositeTypeGo>
 
@@ -156,7 +157,14 @@ func (@(Model.Name.FixedValue.ToShortName()) *@(Model.Name)) UnmarshalJSON(body 
         }
             @if ((p.ModelType is CompositeType && (p.ModelType as CompositeTypeGo).IsPolymorphic) || (p.ModelType is EnumType))
             {
+                @if (p.ShouldBeFlattened())
+                {
+        @:@(Model.Name.FixedValue.ToShortName()).@(p.ModelType.Name) = @(CodeNamerGo.Instance.GetVariableName(p.SerializedName))
+                }
+                else
+                {
         @:@(Model.Name.FixedValue.ToShortName()).@(p.Name) = @(CodeNamerGo.Instance.GetVariableName(p.SerializedName))
+                }
             }
             else
             {
