Make future.Result() work for all LROs.
LROs that use the Azure-AsyncOperation header require a final GET after
the LRO has completed.  The generated Result() method has been updated
to make the GET call depending on the type of polling operation.

--- a/src/Templates/MethodTemplate.cshtml
+++ b/src/Templates/MethodTemplate.cshtml
@@ -152,7 +152,7 @@ func (client @(Model.Owner)) @(Model.SenderMethodName)(req *http.Request) (@send
     sender := autorest.DecorateSender(client, @Model.SendDecorators.EmitAsArguments())
     future := azure.NewFuture(req)
     _, err := future.Done(sender)
-    f := @(senderRetType){Future: future}
+    f := @(senderRetType){Future: future, req: req}
     return f, err
 </text>
 }
