Use "npm stop" to terminate test HTTP server.
The process that was being returned from startServer() wasn't the actual
test server process so when we killed it nothing happened.  Use the stop
script which will correctly terminate the test HTTP server.
Updated test server package brought down some new swaggers so some
generated tests have been updated.  It also uncovered a bug when
generating discriminated types with additional properties.  The bad
codegen has been worked around for now but needs to be fixed.

--- a/src/Templates/ModelTemplate.cshtml
+++ b/src/Templates/ModelTemplate.cshtml
@@ -132,6 +132,11 @@ func (@(Model.Name.FixedValue.ToShortName()) *@(Model.Name)) UnmarshalJSON(body 
     var v *json.RawMessage
         @foreach (var p in Model.AllProperties)
         {
+            if (p.ModelType is DictionaryTypeGo && ((DictionaryTypeGo)p.ModelType).SupportsAdditionalProperties)
+            {
+                // TODO: codegen for this scenario is broken
+                continue;
+            }
         <text>
     @EmptyLine
     v = m["@(p.SerializedName)"]
