--- a/src/Templates/ModelTemplate.cshtml
+++ b/src/Templates/ModelTemplate.cshtml
@@ -6,19 +6,27 @@
 
 @inherits AutoRest.Core.Template<AutoRest.Go.Model.CompositeTypeGo>
 
-@WrapComment("// ", string.Format("{0} is {1}", Model.Name, Model.Documentation.ToSentence()))
+@WrapComment("// ", $"{Model.Name} is {Model.Documentation.ToSentence()}")
 @if (Model.IsPolymorphic)
 {
 <text>
-type @(Model.Name) interface {
+type @(Model.InterfaceName) interface {
     @foreach (var dt in Model.DerivedTypes)
     {
     @:As@(dt.Name) () (*@(dt.Name), bool)
     }
+    As@(Model.Name) () (*@(Model.Name), bool)
 }
 
 @EmptyLine
-func unmarshal@(Model.Name)(body []byte) (@(Model.Name), error){
+
+type @(Model.Name) struct {
+    @(Model.AddHTTPResponse())
+    @(Model.Fields())
+}
+
+@EmptyLine
+func unmarshal@(Model.InterfaceName)(body []byte) (@(Model.InterfaceName), error){
     var m map[string]interface{}
 	err := json.Unmarshal(body, &m)
 	if err != nil {
@@ -36,21 +44,23 @@ func unmarshal@(Model.Name)(body []byte) (@(Model.Name), error){
     </text>
     }
     default:
-        return nil, errors.New("Unsupported type")
+        var @(Model.Name.FixedValue.ToShortName()) @(Model.Name)
+        err := json.Unmarshal(body, &@(Model.Name.FixedValue.ToShortName()))
+        return @(Model.Name.FixedValue.ToShortName()), err 
     }
 }
 
-func unmarshal@(Model.Name)Array(body []byte) ([]@(Model.Name), error){
+func unmarshal@(Model.InterfaceName)Array(body []byte) ([]@(Model.InterfaceName), error){
     var rawMessages []*json.RawMessage
 	err := json.Unmarshal(body, &rawMessages)
 	if err != nil {
         return nil, err
 	}
     @EmptyLine
-    @(Model.Name.FixedValue.ToShortName())Array := make([]@(Model.Name), len(rawMessages))
+    @(Model.Name.FixedValue.ToShortName())Array := make([]@(Model.InterfaceName), len(rawMessages))
     @EmptyLine
     for index, rawMessage := range rawMessages {
-        @(Model.Name.FixedValue.ToShortName()), err := unmarshal@(Model.Name)(*rawMessage)
+        @(Model.Name.FixedValue.ToShortName()), err := unmarshal@(Model.InterfaceName)(*rawMessage)
 	    if err != nil {
 		    return nil, err
 	    }
@@ -70,7 +80,7 @@ type @(Model.Name) struct {
 </text>
 }
 
-@if (Model.BaseIsPolymorphic && !Model.IsPolymorphic)
+@if (Model.BaseIsPolymorphic || Model.IsPolymorphic)
 {
 <text>
 @EmptyLine
@@ -89,7 +99,7 @@ func (@(Model.Name.FixedValue.ToShortName()) @(Model.Name))MarshalJSON() ([]byte
     {
     <text>
 @EmptyLine
-// As@(st.Name) is the @(Model.BaseModelType.Name) implementation for @(Model.Name).
+// As@(st.Name) is the @(Model.RootType.InterfaceName) implementation for @(Model.Name).
 func (@(Model.Name.FixedValue.ToShortName()) @(Model.Name)) As@(st.Name)() (*@(st.Name), bool) {
         @if (st.Equals(Model))
         {
@@ -105,14 +115,14 @@ func (@(Model.Name.FixedValue.ToShortName()) @(Model.Name)) As@(st.Name)() (*@(s
 </text>
 }
 
-@if (Model.HasPolymorphicFields && !Model.IsPolymorphic)
+@if (Model.HasPolymorphicFields)
 {
 <text>
 // UnmarshalJSON is the custom unmarshaler for @(Model.Name) struct.
 func (@(Model.Name.FixedValue.ToShortName()) *@(Model.Name)) UnmarshalJSON(body []byte) error {
     @if (Model.IsWrapperType)
     {
-        @if (Model.BaseType is SequenceType)
+        if (Model.BaseType is SequenceType)
         {
     @:@((Model.BaseType as SequenceTypeGo).ElementType.Name.FixedValue.ToShortName()), err := unmarshal@((Model.BaseType as SequenceTypeGo).ElementType.Name)Array(body)
         }
@@ -125,7 +135,7 @@ func (@(Model.Name.FixedValue.ToShortName()) *@(Model.Name)) UnmarshalJSON(body 
 		return err
 	}
     </text>
-        @if (Model.BaseType is SequenceType)
+        if (Model.BaseType is SequenceType)
         {
     @:@(Model.Name.FixedValue.ToShortName()).Value = &@((Model.BaseType as SequenceTypeGo).ElementType.Name.FixedValue.ToShortName())
         }
