--- a/src/Templates/ModelsTemplate.cshtml
+++ b/src/Templates/ModelsTemplate.cshtml
@@ -9,10 +9,10 @@
 @inherits AutoRest.Core.Template<AutoRest.Go.Model.CodeModelGo>
 @{
     var enums = Model.EnumTypes.Cast<EnumTypeGo>().ToList();
-    enums.Sort(delegate(EnumTypeGo lhs, EnumTypeGo rhs) { return lhs.Name.FixedValue.CompareTo(rhs.Name); });
+    enums.Sort((lhs, rhs) => lhs.Name.FixedValue.CompareTo(rhs.Name));
 
     var modelTypes = Model.ModelTypes.Cast<CompositeTypeGo>().Union(Model.FutureTypes).ToList();
-    modelTypes.Sort(delegate (CompositeTypeGo x, CompositeTypeGo y) { return x.Name.Value.CompareTo(y.Name.Value); });
+    modelTypes.Sort((x, y) => x.Name.Value.CompareTo(y.Name.Value));
 }
 package @Model.Namespace
 @EmptyLine
