--- a/src/Templates/ServiceClientTemplate.cshtml
+++ b/src/Templates/ServiceClientTemplate.cshtml
@@ -10,7 +10,7 @@
     var modelName = CodeNamerGo.Instance.CamelCase(Model.Name);
     var methods = Model.ClientMethods.OrderBy(m => m.Name.Value);
 }
-@WrapComment("// ", Model.Documentation)
+@WrapComment("// ", Model.GetDocumentation)
 package @Model.Namespace
 @EmptyLine
 @Header("// ")
