--- a/src/Templates/ModelTemplate.cshtml
+++ b/src/Templates/ModelTemplate.cshtml
@@ -6,11 +6,11 @@
 
 @inherits AutoRest.Core.Template<AutoRest.Go.Model.CompositeTypeGo>
 
-@if (Model.IsPolymorphic)
+@if (Model.HasInterface)
 {
-@WrapComment("// ", $"{Model.InterfaceName} {Model.Documentation.ToSentence()}")
+@WrapComment("// ", $"{Model.GetInterfaceName()} {Model.Documentation.ToSentence()}")
     <text>
-type @(Model.InterfaceName) interface {
+type @(Model.GetInterfaceName()) interface {
     @foreach (var dt in Model.DerivedTypes)
     {
     @:As@(dt.Name) () (*@(dt.Name), bool)
@@ -26,14 +26,14 @@ type @(Model.Name) struct {
 }
 
 @EmptyLine
-func unmarshal@(Model.InterfaceName)(body []byte) (@(Model.InterfaceName), error){
+func unmarshal@(Model.GetInterfaceName())(body []byte) (@(Model.GetInterfaceName()), error){
     var m map[string]interface{}
 	err := json.Unmarshal(body, &m)
 	if err != nil {
 	    return nil, err
 	}
     @EmptyLine
-    switch m["@(Model.PolymorphicDiscriminator)"] {
+    switch m["@(Model.RootType.PolymorphicDiscriminator)"] {
     @foreach (var dt in Model.DerivedTypes)
     {
     <text>
@@ -50,17 +50,17 @@ func unmarshal@(Model.InterfaceName)(body []byte) (@(Model.InterfaceName), error
     }
 }
 
-func unmarshal@(Model.InterfaceName)Array(body []byte) ([]@(Model.InterfaceName), error){
+func unmarshal@(Model.GetInterfaceName())Array(body []byte) ([]@(Model.GetInterfaceName()), error){
     var rawMessages []*json.RawMessage
 	err := json.Unmarshal(body, &rawMessages)
 	if err != nil {
         return nil, err
 	}
     @EmptyLine
-    @(Model.Name.FixedValue.ToShortName())Array := make([]@(Model.InterfaceName), len(rawMessages))
+    @(Model.Name.FixedValue.ToShortName())Array := make([]@(Model.GetInterfaceName()), len(rawMessages))
     @EmptyLine
     for index, rawMessage := range rawMessages {
-        @(Model.Name.FixedValue.ToShortName()), err := unmarshal@(Model.InterfaceName)(*rawMessage)
+        @(Model.Name.FixedValue.ToShortName()), err := unmarshal@(Model.GetInterfaceName())(*rawMessage)
 	    if err != nil {
 		    return nil, err
 	    }
@@ -100,7 +100,7 @@ func (@(Model.Name.FixedValue.ToShortName()) @(Model.Name))MarshalJSON() ([]byte
     {
     <text>
 @EmptyLine
-// As@(st.Name) is the @(Model.RootType.InterfaceName) implementation for @(Model.Name).
+// As@(st.Name) is the @(Model.RootType.GetInterfaceName()) implementation for @(Model.Name).
 func (@(Model.Name.FixedValue.ToShortName()) @(Model.Name)) As@(st.Name)() (*@(st.Name), bool) {
         @if (st.Equals(Model))
         {
