--- a/src/Templates/ModelTemplate.cshtml
+++ b/src/Templates/ModelTemplate.cshtml
@@ -6,26 +6,38 @@
 
 @inherits AutoRest.Core.Template<AutoRest.Go.Model.CompositeTypeGo>
 
-@WrapComment("// ", string.Format("{0} is {1}", Model.Name, Model.Documentation.ToSentence()))
-@if (Model.IsPolymorphic)
+@if (Model.HasInterface)
 {
-<text>
-type @(Model.Name) interface {
+@WrapComment("// ", $"{Model.GetInterfaceName()} {Model.Documentation.ToSentence()}")
+    <text>
+type @(Model.GetInterfaceName()) interface {
     @foreach (var dt in Model.DerivedTypes)
     {
-    @:As@(dt.Name) () (*@(dt.Name), bool)
+        @:As@(dt.Name) () (*@(dt.Name), bool)
+        if (dt is CompositeTypeGo type && type.HasInterface)
+        {
+            @:As@(dt.GetInterfaceName()) () (@(dt.GetInterfaceName()), bool)
+        }
     }
+    As@(Model.Name) () (*@(Model.Name), bool)
 }
 
 @EmptyLine
-func unmarshal@(Model.Name)(body []byte) (@(Model.Name), error){
+@WrapComment("// ", $"{Model.Name} {Model.Documentation.ToSentence()}")
+type @(Model.Name) struct {
+    @(Model.AddHTTPResponse())
+    @(Model.Fields())
+}
+
+@EmptyLine
+func unmarshal@(Model.GetInterfaceName())(body []byte) (@(Model.GetInterfaceName()), error){
     var m map[string]interface{}
 	err := json.Unmarshal(body, &m)
 	if err != nil {
 	    return nil, err
 	}
     @EmptyLine
-    switch m["@(Model.PolymorphicDiscriminator)"] {
+    switch m["@(Model.RootType.PolymorphicDiscriminator)"] {
     @foreach (var dt in Model.DerivedTypes)
     {
     <text>
@@ -36,21 +48,23 @@ func unmarshal@(Model.Name)(body []byte) (@(Model.Name), error){
     </text>
     }
     default:
-        return nil, errors.New("Unsupported type")
+        var @(Model.Name.FixedValue.ToShortName()) @(Model.Name)
+        err := json.Unmarshal(body, &@(Model.Name.FixedValue.ToShortName()))
+        return @(Model.Name.FixedValue.ToShortName()), err
     }
 }
 
-func unmarshal@(Model.Name)Array(body []byte) ([]@(Model.Name), error){
+func unmarshal@(Model.GetInterfaceName())Array(body []byte) ([]@(Model.GetInterfaceName()), error){
     var rawMessages []*json.RawMessage
 	err := json.Unmarshal(body, &rawMessages)
 	if err != nil {
         return nil, err
 	}
     @EmptyLine
-    @(Model.Name.FixedValue.ToShortName())Array := make([]@(Model.Name), len(rawMessages))
+    @(Model.Name.FixedValue.ToShortName())Array := make([]@(Model.GetInterfaceName()), len(rawMessages))
     @EmptyLine
     for index, rawMessage := range rawMessages {
-        @(Model.Name.FixedValue.ToShortName()), err := unmarshal@(Model.Name)(*rawMessage)
+        @(Model.Name.FixedValue.ToShortName()), err := unmarshal@(Model.GetInterfaceName())(*rawMessage)
 	    if err != nil {
 		    return nil, err
 	    }
@@ -62,7 +76,8 @@ func unmarshal@(Model.Name)Array(body []byte) ([]@(Model.Name), error){
 }
 else
 {
-<text>
+@WrapComment("// ", $"{Model.Name} {Model.Documentation.ToSentence()}")
+    <text>
 type @(Model.Name) struct {
     @(Model.AddHTTPResponse())
     @(Model.Fields())
@@ -70,7 +85,7 @@ type @(Model.Name) struct {
 </text>
 }
 
-@if (Model.BaseIsPolymorphic && !Model.IsPolymorphic)
+@if (Model.BaseIsPolymorphic || Model.IsPolymorphic)
 {
 <text>
 @EmptyLine
@@ -89,7 +104,7 @@ func (@(Model.Name.FixedValue.ToShortName()) @(Model.Name))MarshalJSON() ([]byte
     {
     <text>
 @EmptyLine
-// As@(st.Name) is the @(Model.BaseModelType.Name) implementation for @(Model.Name).
+// As@(st.Name) is the @(Model.RootType.GetInterfaceName()) implementation for @(Model.Name).
 func (@(Model.Name.FixedValue.ToShortName()) @(Model.Name)) As@(st.Name)() (*@(st.Name), bool) {
         @if (st.Equals(Model))
         {
@@ -99,35 +114,52 @@ func (@(Model.Name.FixedValue.ToShortName()) @(Model.Name)) As@(st.Name)() (*@(s
         {
     @:return nil, false
         }
-}
+        }
+
+    @if (st is CompositeTypeGo type && type.HasInterface)
+    {
+        @EmptyLine
+        @:// As@(st.GetInterfaceName()) is the @(Model.RootType.GetInterfaceName()) implementation for @(Model.Name).
+        @:func(@(Model.Name.FixedValue.ToShortName()) @(Model.Name)) As@(st.GetInterfaceName())()(@(st.GetInterfaceName()), bool) {
+        if (st.Equals(Model) || Model.DerivesFrom(st))
+        {
+            @:return &@(Model.Name.FixedValue.ToShortName()), true
+        }
+        else
+        {
+            @:return nil, false
+        }
+        @:}
+        @EmptyLine
+    }
     </text>
     }
 </text>
 }
 
-@if (Model.HasPolymorphicFields && !Model.IsPolymorphic)
+@if (Model.HasPolymorphicFields)
 {
 <text>
 // UnmarshalJSON is the custom unmarshaler for @(Model.Name) struct.
 func (@(Model.Name.FixedValue.ToShortName()) *@(Model.Name)) UnmarshalJSON(body []byte) error {
     @if (Model.IsWrapperType)
     {
-        @if (Model.BaseType is SequenceType)
+        if (Model.BaseType is SequenceType)
         {
-    @:@((Model.BaseType as SequenceTypeGo).ElementType.Name.FixedValue.ToShortName()), err := unmarshal@((Model.BaseType as SequenceTypeGo).ElementType.Name)Array(body)
+    @:@(((SequenceTypeGo) Model.BaseType).ElementType.Name.FixedValue.ToShortName()), err := unmarshal@((Model.BaseType as SequenceTypeGo).ElementType.GetInterfaceName())Array(body)
         }
         else
         {
-    @:@(Model.BaseType.Name.FixedValue.ToShortName()), err := unmarshal@(Model.BaseType.Name)(body)
+    @:@(Model.BaseType.Name.FixedValue.ToShortName()), err := unmarshal@(Model.BaseType.GetInterfaceName())(body)
         }
     <text>
 	if err != nil {
 		return err
 	}
     </text>
-        @if (Model.BaseType is SequenceType)
+        if (Model.BaseType is SequenceType type)
         {
-    @:@(Model.Name.FixedValue.ToShortName()).Value = &@((Model.BaseType as SequenceTypeGo).ElementType.Name.FixedValue.ToShortName())
+            @:@(Model.Name.FixedValue.ToShortName()).Value = &@type.ElementType.Name.FixedValue.ToShortName()
         }
         else
         {
@@ -142,7 +174,7 @@ func (@(Model.Name.FixedValue.ToShortName()) *@(Model.Name)) UnmarshalJSON(body 
 	if err != nil {
 		return err
 	}
-    
+
     var v *json.RawMessage
         @foreach (var p in Model.AllProperties)
         {
@@ -150,13 +182,13 @@ func (@(Model.Name.FixedValue.ToShortName()) *@(Model.Name)) UnmarshalJSON(body 
     @EmptyLine
     v = m["@(p.SerializedName)"]
     if v != nil {
-            @if (p.ModelType is CompositeType && (p.ModelType as CompositeTypeGo).IsPolymorphic)
+            @if (p.ModelType is CompositeType && ((CompositeTypeGo) p.ModelType).IsPolymorphic)
             {
-        @:@(CodeNamerGo.Instance.GetVariableName(p.SerializedName)), err := unmarshal@(p.ModelType.Name)(*m["@(p.SerializedName)"])
+        @:@(CodeNamerGo.Instance.GetVariableName(p.SerializedName)), err := unmarshal@(p.ModelType.GetInterfaceName())(*m["@(p.SerializedName)"])
             }
-            else if (p.ModelType is SequenceType && (p.ModelType as SequenceTypeGo).ElementType is CompositeType && ((p.ModelType as SequenceTypeGo).ElementType as CompositeType).IsPolymorphic)
+            else if ((p.ModelType as SequenceType)?.ElementType is CompositeType && ((CompositeType) ((SequenceType) p.ModelType).ElementType).IsPolymorphic)
             {
-        @:@(CodeNamerGo.Instance.GetVariableName(p.SerializedName)), err := unmarshal@((p.ModelType as SequenceTypeGo).ElementType.Name)Array(*m["@(p.SerializedName)"])
+        @:@(CodeNamerGo.Instance.GetVariableName(p.SerializedName)), err := unmarshal@(((SequenceTypeGo) p.ModelType).ElementType.GetInterfaceName())Array(*m["@(p.SerializedName)"])
             }
             else
             {
@@ -168,7 +200,7 @@ func (@(Model.Name.FixedValue.ToShortName()) *@(Model.Name)) UnmarshalJSON(body 
         if err != nil {
             return err
         }
-            @if ((p.ModelType is CompositeType && (p.ModelType as CompositeTypeGo).IsPolymorphic) || (p.ModelType is EnumType))
+            @if ((p.ModelType is CompositeType && ((CompositeTypeGo) p.ModelType).IsPolymorphic) || (p.ModelType is EnumType))
             {
         @:@(Model.Name.FixedValue.ToShortName()).@(p.Name) = @(CodeNamerGo.Instance.GetVariableName(p.SerializedName))
             }
