--- a/src/Templates/ModelTemplate.cshtml
+++ b/src/Templates/ModelTemplate.cshtml
@@ -281,8 +281,8 @@ func (page @Model.Name) NotDone() bool {
 }
 
 // Response returns the raw server response from the last page request.
-func (page @Model.Name) Response() autorest.Response {
-    return page.@(pageType.ResultFieldName).Response
+func (page @Model.Name) Response() @pageType.ContentType.Name {
+    return page.@(pageType.ResultFieldName)
 }
 
 // Values returns the slice of values for the current page or nil if there are no values.
@@ -322,8 +322,8 @@ func (iter @Model.Name) NotDone() bool {
     return iter.@(iterType.PageField).NotDone() && iter.@(iterType.IndexField) < len(iter. @(iterType.PageField).Values())
 }
 
-// Response returns the raw server response.
-func (iter @Model.Name) Response() autorest.Response {
+// Response returns the raw server response from the last page request.
+func (iter @Model.Name) Response() @iterType.PageType.ContentType.Name {
     return iter.@(iterType.PageField).Response()
 }
 
