--- a/src/Templates/ResponderPolicy.cshtml
+++ b/src/Templates/ResponderPolicy.cshtml
@@ -29,18 +29,18 @@ type responderPolicyFactory struct {
 }
 
 // New creates a responder policy factory.
-func (arpf responderPolicyFactory) New(node pipeline.Node) pipeline.Policy {
-	return responderPolicy{node: node, responder: arpf.responder}
+func (arpf responderPolicyFactory) New(next pipeline.Policy, config *pipeline.Configuration) pipeline.Policy {
+	return responderPolicy{next: next, responder: arpf.responder}
 }
 
 type responderPolicy struct {
-	node      pipeline.Node
+	next      pipeline.Policy
 	responder responder
 }
 
 // Do sends the request to the service and validates/deserializes the HTTP response.
 func (arp responderPolicy) Do(ctx context.Context, request pipeline.Request) (pipeline.Response, error) {
-	resp, err := arp.node.Do(ctx, request)
+	resp, err := arp.next.Do(ctx, request)
 	if err != nil {
 		return resp, err
 	}
