Make HasInterface an extension method

--- a/src/Templates/MethodTemplate.cshtml
+++ b/src/Templates/MethodTemplate.cshtml
@@ -106,7 +106,7 @@ func (client @(Model.Owner)) @(Model.PreparerMethodName)(@(Model.MethodParameter
 }
 @if (Model.QueryParameters.Any())
 {
-    @if (Model.QueryParameters.Any(p => p.GetParameterName().IsApiVersion())
+    if (Model.QueryParameters.Any(p => p.GetParameterName().IsApiVersion())
         && !Model.LocalParameters.Any(p => p.GetParameterName().IsApiVersion()))
     {
         @:@(string.Format("const APIVersion = \"{0}\"", Model.APIVersion))
