--- a/src/Templates/ModelTemplate.cshtml
+++ b/src/Templates/ModelTemplate.cshtml
@@ -6,7 +6,7 @@
 
 @inherits AutoRest.Core.Template<AutoRest.Go.Model.CompositeTypeGo>
 
-@if (Model.HasInterface)
+@if (Model.HasInterface())
 {
 @WrapComment("// ", $"{Model.GetInterfaceName()} {Model.Documentation.ToSentence()}")
     <text>
@@ -14,7 +14,7 @@ type @(Model.GetInterfaceName()) interface {
     @foreach (var dt in Model.DerivedTypes)
     {
         @:As@(dt.Name) () (*@(dt.Name), bool)
-        if (dt is CompositeTypeGo type && type.HasInterface)
+        if (dt.HasInterface())
         {
             @:As@(dt.GetInterfaceName()) () (@(dt.GetInterfaceName()), bool)
         }
@@ -76,7 +76,7 @@ func unmarshal@(Model.GetInterfaceName())Array(body []byte) ([]@(Model.GetInterf
 }
 else
 {
-    @if (Model is PageTypeGo)
+    if (Model is PageTypeGo)
     {
         var pageType = Model as PageTypeGo;
         var itemName = pageType.ItemName;
@@ -156,7 +156,7 @@ func (@(Model.Name.FixedValue.ToShortName()) @(Model.Name)) As@(st.Name)() (*@(s
         }
         }
 
-    @if (st is CompositeTypeGo type && type.HasInterface)
+    @if (st.HasInterface())
     {
         @EmptyLine
         @:// As@(st.GetInterfaceName()) is the @(Model.RootType.GetInterfaceName()) implementation for @(Model.Name).
@@ -184,9 +184,9 @@ func (@(Model.Name.FixedValue.ToShortName()) @(Model.Name)) As@(st.Name)() (*@(s
 func (@(Model.Name.FixedValue.ToShortName()) *@(Model.Name)) UnmarshalJSON(body []byte) error {
     @if (Model.IsWrapperType)
     {
-        if (Model.BaseType is SequenceType)
+        if (Model.BaseType is SequenceTypeGo sequenceType)
         {
-    @:@(((SequenceTypeGo) Model.BaseType).ElementType.Name.FixedValue.ToShortName()), err := unmarshal@((Model.BaseType as SequenceTypeGo).ElementType.GetInterfaceName())Array(body)
+    @:@(sequenceType.ElementType.Name.FixedValue.ToShortName()), err := unmarshal@(sequenceType.ElementType.GetInterfaceName())Array(body)
         }
         else
         {
@@ -218,7 +218,7 @@ func (@(Model.Name.FixedValue.ToShortName()) *@(Model.Name)) UnmarshalJSON(body 
     var v *json.RawMessage
         @foreach (var p in Model.AllProperties)
         {
-            if (p.ModelType is DictionaryTypeGo && ((DictionaryTypeGo)p.ModelType).SupportsAdditionalProperties)
+            if (p.ModelType is DictionaryTypeGo dictionaryType && dictionaryType.SupportsAdditionalProperties)
             {
                 // TODO: codegen for this scenario is broken
                 continue;
@@ -227,13 +227,13 @@ func (@(Model.Name.FixedValue.ToShortName()) *@(Model.Name)) UnmarshalJSON(body 
     @EmptyLine
     v = m["@(p.SerializedName)"]
     if v != nil {
-            @if (p.ModelType is CompositeType && ((CompositeTypeGo) p.ModelType).IsPolymorphic)
+            @if (p.ModelType.HasInterface())
             {
         @:@(CodeNamerGo.Instance.GetVariableName(p.SerializedName)), err := unmarshal@(p.ModelType.GetInterfaceName())(*m["@(p.SerializedName)"])
             }
-            else if ((p.ModelType as SequenceType)?.ElementType is CompositeType && ((CompositeType) ((SequenceType) p.ModelType).ElementType).IsPolymorphic)
+            else if (p.ModelType is SequenceTypeGo sequenceType && sequenceType.ElementType.HasInterface())
             {
-        @:@(CodeNamerGo.Instance.GetVariableName(p.SerializedName)), err := unmarshal@(((SequenceTypeGo) p.ModelType).ElementType.GetInterfaceName())Array(*m["@(p.SerializedName)"])
+        @:@(CodeNamerGo.Instance.GetVariableName(p.SerializedName)), err := unmarshal@(sequenceType.ElementType.GetInterfaceName())Array(*m["@(p.SerializedName)"])
             }
             else
             {
@@ -245,7 +245,7 @@ func (@(Model.Name.FixedValue.ToShortName()) *@(Model.Name)) UnmarshalJSON(body 
         if err != nil {
             return err
         }
-            @if ((p.ModelType is CompositeType && ((CompositeTypeGo) p.ModelType).IsPolymorphic) || (p.ModelType is EnumType))
+            @if (p.ModelType.HasInterface() || p.ModelType is EnumType)
             {
         @:@(Model.Name.FixedValue.ToShortName()).@(p.Name) = @(CodeNamerGo.Instance.GetVariableName(p.SerializedName))
             }
